Fixed editor toolbar misalignment

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -134,13 +134,13 @@ button svg{
 }
 
 .mdxeditor-container .toolbar {
-  width: calc(100% - 20px);
+  width: calc(100% - 10px);
   border-radius: 8px;
   background-color: #2e3455;
   margin: 10px;
   margin-left: 0px;
   margin-right: 0px;
-  padding: 10px;
+  padding: 5px;
   border-collapse: collapse;
   color: #acc7ff;
   font-family: arial;
@@ -149,6 +149,14 @@ button svg{
   left: 0;
   z-index: 100;
   margin-top: 0px;
+}
+
+.mdxeditor-container .toolbar button{
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding:0px;
 }
 .back-button{
   align-self: anchor-center;
